<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.VerifyNumberActivity">

        <ImageView
            android:id="@+id/backBtnIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/icon_color"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:padding="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/enter_the_otp_hint"/>

        <TextView
            android:id="@+id/showNumberTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/mobile_number_hint"/>


        <EditText
            android:id="@+id/otpET"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/enter_code_hint"
            android:inputType="number|textFilter"
            android:maxLength="6"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="18sp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/title_continue"
            android:id="@+id/continueBtn"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:background="@drawable/all_side_border"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_gravity="center"/>

    </LinearLayout>
</layout>