<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SignUpActivity">

        <TextView
            android:id="@+id/enterMobileNumberTVID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:textColor="@color/black"
            android:text="@string/enter_mobile_number_hint"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/phoneNumberEtID"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/mobile_number_hint"
            android:inputType="number|textFilter"
            android:maxLength="11"
            android:gravity="center"
            android:padding="10dp"
            android:drawableLeft="@drawable/ic_phone_black_24dp"
            android:drawableTint="@color/icon_color"
            android:layout_below="@id/enterMobileNumberTVID"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/messageEtID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:lineSpacingExtra="2dp"
            android:text="@string/login_hint_text"
            android:layout_below="@id/phoneNumberEtID"
            android:textSize="12sp"
            />

        <LinearLayout
            android:layout_below="@+id/messageEtID"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/termsAndConditionL"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:paddingLeft="15dp"
            android:layout_marginBottom="50dp">

            <CheckBox
                android:id="@+id/termsAndConditionCBID"
                android:layout_width="wrap_content"
                android:checked="true"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/termsAndConditionTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/agree_text" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/messageEtID"
            android:layout_marginTop="70dp"
            android:background="@drawable/all_side_border"
            android:text="Next"
            android:textAllCaps="false"
            android:id="@+id/nextBtn"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>

        <ProgressBar
            android:layout_below="@+id/nextBtn"
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/termsAndConditionL"
            android:layout_centerHorizontal="true"
            android:id="@+id/orTextTV"
            android:layout_marginTop="35dp"
            android:text="or"/>


        <TextView
            android:id="@+id/loginTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Log in"
            android:layout_below="@+id/orTextTV"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>
</layout>