<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.GeneralInfoFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">

                <ImageView
                    android:id="@+id/nameIV"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_person_black_24dp"
                    android:tint="@color/icon_color" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_toLeftOf="@+id/editIV"
                    android:layout_toRightOf="@+id/nameIV">

                    <TextView
                        android:id="@+id/nameTextTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_name"
                        android:textColor="@color/black"
                        android:textSize="16sp" />


                    <TextView
                        android:id="@+id/nameTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/nameTextTV"
                        android:hint="@string/not_set_yet_hint"
                        android:textSize="14sp" />

                </RelativeLayout>

                <ImageView
                    android:id="@+id/editIV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="5dp"
                    android:src="@drawable/ic_edit_black_24dp"
                    android:tint="@color/icon_color" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <ImageView
                    android:id="@+id/emailIV"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_email_black_24dp"
                    android:tint="@color/icon_color" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@+id/emailIV">

                    <TextView
                        android:id="@+id/emailTextTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_email"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/emailTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/emailTextTV"
                        android:hint="@string/not_set_yet_hint"
                        android:textSize="14sp" />

                </RelativeLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <ImageView
                    android:id="@+id/numberIV"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_phone_black_24dp"
                    android:tint="@color/icon_color" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@+id/numberIV">

                    <TextView
                        android:id="@+id/mobileNumberTextTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_mobile_number"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/mobileNumberTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/mobileNumberTextTV"
                        android:hint="@string/not_set_yet_hint"
                        android:textSize="14sp" />

                </RelativeLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <ImageView
                    android:id="@+id/genderIV"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_group_black_24dp"
                    android:tint="@color/icon_color" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@+id/genderIV">

                    <TextView
                        android:id="@+id/genderTextTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_gender"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/genderTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/genderTextTV"
                        android:hint="@string/not_set_yet_hint"
                        android:textSize="14sp" />

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <ImageView
                    android:id="@+id/addressIV"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_location_on_black_24dp"
                    android:tint="@color/icon_color" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@+id/addressIV">

                    <TextView
                        android:id="@+id/addressTextTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_address"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/addressTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/addressTextTV"
                        android:hint="@string/not_set_yet_hint"
                        android:textSize="14sp" />

                </RelativeLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/changePasswordTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="Looking for update password?"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</layout>